--- a/creative.css
+++ b/creative.css
@@ -150,7 +150,7 @@ header {
   background-size: cover;
   -o-background-size: cover;
   background-position: center;
-  background-image: url('../img/header.jpg');
+  background-image: url('http://blackrockdigital.github.io/startbootstrap-creative/img/header.jpg');
   text-align: center;
   color: white;
 }
